
nxTools v1.0.5 (not released):
  NEW: Section cookie for latest race and pre symlinks.
  CHG: Improved path resolving and symlink removal functions.
  CHG: Output from "SITE CLEAN" and "SITE REBUILD" is no longer buffered to
       prevent hitting script execution timeouts.
  FIX: Directory dupe database was always cleaned, even if disable in the config.

nxTools v1.0.4a (May 7, 2006):
  FIX: Typo in v1.0.4 that broke file dupe checking.

nxTools v1.0.4 (May 6, 2006):
  NEW: Check if the request was already filled before adding it.
  NEW: Extensions are now loaded using Tcl's package system.
  FIX: Properly quote string values in SQL statements.
  FIX: The "SITE PRE STATS" command was broken in v1.0.3.
  FIX: The maximum request age should be logged in seconds.
  FIX: The release check for "SITE REQUEST" did not allow some valid names.

nxTools v1.0.3 (Apr 5, 2006):
  NEW: Display pre areas on multiple lines if necessary (word wrapping).
  NEW: SITE SEARCH, same as SITE DUPE but with simpler output.
  CHG: Updated nxHelper to v2.3.0, new global-interp key functions.
  FIX: Possible crashes using "SITE OPEN/CLOSE" due to ioFTPD's buggy
       global-interp "var get/set" command.
  FIX: The unnuke command failed when unnuking a directory without a nuke prefix.
  FIX: Update the nuke record for the new and old directory names if the rename fails.

nxTools v1.0.2 (Feb 23, 2006):
  NEW: Added text templates for SITE WHO, see the text/Who.* files.
  NEW: Option to set the default number of results for SITE DUPE/NEW/etc.
  CHG: Updated nxHelper to v2.2.5, initialisation speed improvements.
  FIX: ASCII typo in the default Requests.Header template.
  FIX: Inconsistencies in the time duration functions.

nxTools v1.0.1 (Oct 29, 2005):
  CHG: Display requests in ascending order, based on their ID.
  CHG: Moved configuration to the nxTools directory.
  CHG: Removed 'SITE INVITE' command.
  CHG: Removed an unneeded ORDER clause from the dupe database cleaner.